Attempt to fix Firefox PC alignment

--- a/src/assets/sass/modules/_layout-shared.scss
+++ b/src/assets/sass/modules/_layout-shared.scss
@@ -624,6 +624,7 @@ span.spinner {
 
 .txp-form-field {
     margin: 1em 0;
+    vertical-align: top;
 }
 
 /**
